<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_favorite"
        android:icon="@drawable/ic_star"
        android:title="@string/toggle_favorite"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_lock_topic"
        android:icon="@drawable/ic_lock"
        android:title="@string/lock_topic"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_reset_topic"
        android:title="@string/reset_topic"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete_topic"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete_topic"
        app:showAsAction="ifRoom" />
</menu>